--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,8 +31,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+}
+
+body {
   display: flex;
   place-items: center;
   min-width: 320px;
@@ -45,8 +50,6 @@ body {
 #root {
   width: 100%;
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -90,7 +93,6 @@ input {
   outline: none;
   transition: all 0.2s;
   width: 100%;
-  box-sizing: border-box;
 }
 
 input:focus {
