--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,7 @@
   --color-text-dim: #64748b;
   --color-success: #10b981;
   --color-error: #ef4444;
+  --color-active: #aac5ff;
 
   --shadow-lg: 0 10px 15px -3px rgba(148, 163, 184, 0.1), 0 4px 6px -2px rgba(148, 163, 184, 0.05);
   --glow-primary: 0 0 15px var(--color-primary-glow);
@@ -328,9 +329,9 @@ input:focus {
   transition: all 0.2s;
 }
 
-.square.loader {
-  --square-size: 150px;
-  margin-bottom: 1rem;
+.square.active_RPS {
+  background-color: var(--color-active);
+  color: white;
 }
 
 @media (max-width: 768px) {
